# clang-tooling-sample

./: .gitignore  CMakeLists.txt  generate.sh  lib.cpp  lib.hpp  lib.meta.cpp  lib_device.cpp  main.cpp  main.meta.cpp  main_host.cpp
.devcontainer/: Dockerfile  devcontainer.json
src/: AnnotationMatcher.cpp  ClangCheck.cpp
